--- a/sobre.html
+++ b/sobre.html
@@ -23,8 +23,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Exploradores - O Jogo de Aventura e Estratégia! 🧭✨</h1>
-        
+        <h1>Exploradores 🧭</h1>
+        <h1>✨O Jogo de Aventura e Estratégia! ✨</h1>
         <p>🔍 Embarque em expedições científicas desafiadoras e emocionantes!</p>
         <p>🎲 Duas modalidades para seu estilo: Exploradores Amigos 🤝 e Exploradores Rivais ⚔️.</p>
         <p>📜 Junte cartas de valor, supere bloqueios e proteja suas campanhas!</p>
