--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <area shape="rect" coords="446,477,868,875"   href="exploradores_manual_mobile.pdf" alt="Manual (Mobile)">
             <area shape="rect" coords="0,722,442,1111"    href="ajuda1.html" alt="Calculadora">
             <area shape="rect" coords="461,910,861,1305"  href="sobre.html" alt="Manual da Calculadora">
-            <area shape="rect" coords="264,1387,336,1461" href="https://www.facebook.com" alt="Facebook">
+            <area shape="rect" coords="264,1387,336,1461" href="https://www.facebook.com/share/VeXWJtTjgaeFu7Po/?mibextid=qi2Omg" alt="Facebook">
             <area shape="rect" coords="392,1389,465,1460" href="https://www.instagram.com/jogo.exploradores?igsh=MXF4dTI3OGw3ZXFiag==" alt="Instagram">
             <area shape="rect" coords="519,1388,605,1458" href="mailto:jogoexploradores@gmail.com" alt="Mande um e-mail">
         </map>
