--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- Mapa de imagem para definir as áreas clicáveis -->
         <map name="image-map">
             <area shape="rect" coords="0,290,445,690"     href="calculadora.html" alt="Sobre Nós">
-            <area shape="rect" coords="446,477,868,875"   href="exploradores_manual_mobile.pdf" alt="Manual (Mobile)">
+            <area shape="rect" coords="446,477,868,875"   href="./download/exploradores_manual_mobile.pdf" alt="Manual (Mobile)">
             <area shape="rect" coords="0,722,442,1111"    href="ajuda1.html" alt="Calculadora">
             <area shape="rect" coords="461,910,861,1305"  href="sobre.html" alt="Manual da Calculadora">
             <area shape="rect" coords="264,1387,336,1461" href="https://www.facebook.com/share/VeXWJtTjgaeFu7Po/?mibextid=qi2Omg" alt="Facebook">
