--- a/index.html
+++ b/index.html
@@ -21,22 +21,30 @@
             width: 100%;
             height: auto;
         }
+
+        .area-link {
+            position: absolute;
+            display: block;
+        }
+
+        .area-link:hover {
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <!-- Linha para carregar a imagem de fundo com todos os desenhos -->
-        <img src="img/fundo.png" alt="Exploradores" usemap="#image-map">
+        <img src="img/fundo.png" alt="Exploradores">
         
         <!-- Mapa de imagem para definir as áreas clicáveis -->
-        <map name="image-map">
-            <area shape="rect" coords="0,290,445,690"     href="calculadora.html" alt="Sobre Nós">
-            <area shape="rect" coords="446,477,868,875"   href="./download/exploradores_manual_mobile.pdf" alt="Manual (Mobile)">
-            <area shape="rect" coords="0,722,442,1111"    href="ajuda1.html" alt="Calculadora">
-            <area shape="rect" coords="461,910,861,1305"  href="sobre.html" alt="Manual da Calculadora">
-            <area shape="rect" coords="264,1387,336,1461" href="https://www.facebook.com/share/VeXWJtTjgaeFu7Po/?mibextid=qi2Omg" alt="Facebook">
-            <area shape="rect" coords="392,1389,465,1460" href="https://www.instagram.com/jogo.exploradores?igsh=MXF4dTI3OGw3ZXFiag==" alt="Instagram">
-            <area shape="rect" coords="519,1388,605,1458" href="mailto:jogoexploradores@gmail.com" alt="Mande um e-mail">
-        </map>
+        <a class="area-link" style="top: 290px; left: 0; width: 445px; height: 400px;" href="calculadora.html" alt="Sobre Nós" target="_blank"></a>
+        <a class="area-link" style="top: 477px; left: 446px; width: 422px; height: 398px;" href="exploradores-manual-mobile.pdf" alt="Manual (Mobile)" target="_blank"></a>
+        <a class="area-link" style="top: 722px; left: 0; width: 442px; height: 389px;" href="ajuda1.html" alt="Calculadora" target="_blank"></a>
+        <a class="area-link" style="top: 910px; left: 461px; width: 400px; height: 395px;" href="sobre.html" alt="Manual da Calculadora" target="_blank"></a>
+        <a class="area-link" style="top: 1387px; left: 264px; width: 72px; height: 74px;" href="https://www.facebook.com/share/VeXWJtTjgaeFu7Po/?mibextid=qi2Omg" alt="Facebook" target="_blank"></a>
+        <a class="area-link" style="top: 1389px; left: 392px; width: 73px; height: 71px;" href="https://www.instagram.com/jogo.exploradores?igsh=MXF4dTI3OGw3ZXFiag==" alt="Instagram" target="_blank"></a>
+        <a class="area-link" style="top: 1388px; left: 519px; width: 86px; height: 70px;" href="mailto:jogoexploradores@gmail.com" alt="Mande um e-mail" target="_blank"></a>
     </div>
+</body>
 </html>
