--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         
         <!-- Mapa de imagem para definir as áreas clicáveis -->
         <a class="area-link" style="top: 290px; left: 0; width: 445px; height: 400px;" href="calculadora.html" alt="Sobre Nós" target="_blank"></a>
-        <a class="area-link" style="top: 477px; left: 446px; width: 422px; height: 398px;" href="exploradores-manual-mobile.pdf" alt="Manual (Mobile)" target="_blank"></a>
+        <a class="area-link" style="top: 477px; left: 446px; width: 422px; height: 398px;" href=".\download\exploradores_manual_mobile.pdf" alt="Manual (Mobile)" target="_blank"></a>
         <a class="area-link" style="top: 722px; left: 0; width: 442px; height: 389px;" href="ajuda1.html" alt="Calculadora" target="_blank"></a>
         <a class="area-link" style="top: 910px; left: 461px; width: 400px; height: 395px;" href="sobre.html" alt="Manual da Calculadora" target="_blank"></a>
         <a class="area-link" style="top: 1387px; left: 264px; width: 72px; height: 74px;" href="https://www.facebook.com/share/VeXWJtTjgaeFu7Po/?mibextid=qi2Omg" alt="Facebook" target="_blank"></a>
