--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
             color: #fff;
             font-family: Arial, sans-serif;
             text-align: center;
+            margin: 0;
         }
 
         .container {
             position: relative;
             display: inline-block;
+            max-width: 100%;
         }
 
         .container img {
@@ -25,26 +27,32 @@
         .area-link {
             position: absolute;
             display: block;
-        }
-
-        .area-link:hover {
+            width: 100%;
+            height: 100%;
             cursor: pointer;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <!-- Linha para carregar a imagem de fundo com todos os desenhos -->
         <img src="img/fundo.png" alt="Exploradores">
         
-        <!-- Mapa de imagem para definir as áreas clicáveis -->
-        <a class="area-link" style="top: 290px; left: 0; width: 445px; height: 400px;" href="calculadora.html" alt="Sobre Nós" target="_blank"></a>
-        <a class="area-link" style="top: 477px; left: 446px; width: 422px; height: 398px;" href=".\download\exploradores_manual_mobile.pdf" alt="Manual (Mobile)" target="_blank"></a>
-        <a class="area-link" style="top: 722px; left: 0; width: 442px; height: 389px;" href="ajuda1.html" alt="Calculadora" target="_blank"></a>
-        <a class="area-link" style="top: 910px; left: 461px; width: 400px; height: 395px;" href="sobre.html" alt="Manual da Calculadora" target="_blank"></a>
-        <a class="area-link" style="top: 1387px; left: 264px; width: 72px; height: 74px;" href="https://www.facebook.com/share/VeXWJtTjgaeFu7Po/?mibextid=qi2Omg" alt="Facebook" target="_blank"></a>
-        <a class="area-link" style="top: 1389px; left: 392px; width: 73px; height: 71px;" href="https://www.instagram.com/jogo.exploradores?igsh=MXF4dTI3OGw3ZXFiag==" alt="Instagram" target="_blank"></a>
-        <a class="area-link" style="top: 1388px; left: 519px; width: 86px; height: 70px;" href="mailto:jogoexploradores@gmail.com" alt="Mande um e-mail" target="_blank"></a>
+        <a class="area-link" style="top: 290px; left: 0; width: 445px; height: 400px;" href="calculadora.html" target="_blank"></a>
+        <a class="area-link" style="top: 477px; left: 446px; width: 422px; height: 398px;" href=".\download\exploradores_manual_mobile.pdf" target="_blank"></a>
+        <a class="area-link" style="top: 722px; left: 0; width: 442px; height: 389px;" href="ajuda1.html" target="_blank"></a>
+        <a class="area-link" style="top: 910px; left: 461px; width: 400px; height: 395px;" href="sobre.html" target="_blank"></a>
+        <a class="area-link" style="top: 1387px; left: 264px; width: 72px; height: 74px;" href="https://www.facebook.com/share/VeXWJtTjgaeFu7Po/?mibextid=qi2Omg" target="_blank"></a>
+        <a class="area-link" style="top: 1389px; left: 392px; width: 73px; height: 71px;" href="https://www.instagram.com/jogo.exploradores?igsh=MXF4dTI3OGw3ZXFiag==" target="_blank"></a>
+        <a class="area-link" style="top: 1388px; left: 519px; width: 86px; height: 70px;" href="mailto:jogoexploradores@gmail.com" target="_blank"></a>
     </div>
+
+    <script>
+        document.querySelectorAll('.area-link').forEach(link => {
+            link.addEventListener('click', function(e) {
+                e.preventDefault();
+                window.open(this.href, '_blank');
+            });
+        });
+    </script>
 </body>
 </html>
