--- a/index.html
+++ b/index.html
@@ -12,47 +12,88 @@
             text-align: center;
             margin: 0;
         }
-
         .container {
-            position: relative;
-            display: inline-block;
-            max-width: 100%;
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 20px;
         }
-
-        .container img {
+        .title-image {
             width: 100%;
             height: auto;
         }
-
-        .area-link {
-            position: absolute;
-            display: block;
+        .table-container {
+            display: table;
             width: 100%;
-            height: 100%;
+            margin: 20px 0;
+        }
+        .row {
+            display: table-row;
+        }
+        .cell {
+            display: table-cell;
+            vertical-align: top;
+            text-align: center;
+        }
+        .cell img {
+            width: 100%;
+            height: auto;
             cursor: pointer;
+        }
+        .first-table .cell:nth-child(2) {
+            padding-top: 50px; /* Ajuste o valor conforme necessário */
+        }
+        .second-table {
+            margin-top: 40px; /* Espaço vazio entre as tabelas */
+            text-align: center;
+        }
+        .second-table .cell img {
+            width: 50px; /* Definindo um tamanho fixo para ícones pequenos */
+            height: 50px; /* Definindo um tamanho fixo para ícones pequenos */
+        }
+        .second-table .cell {
+            padding: 0 25px; /* Espaçamento horizontal entre as células */
+        }
+        .second-table .row {
+            display: flex;
+            justify-content: center;
+        }
+        .second-table .cell {
+            padding: 0 25px; /* Espaçamento horizontal entre as células */
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <img src="img/fundo.png" alt="Exploradores">
-        
-        <a class="area-link" style="top: 290px; left: 0; width: 445px; height: 400px;" href="calculadora.html" target="_blank"></a>
-        <a class="area-link" style="top: 477px; left: 446px; width: 422px; height: 398px;" href=".\download\exploradores_manual_mobile.pdf" target="_blank"></a>
-        <a class="area-link" style="top: 722px; left: 0; width: 442px; height: 389px;" href="ajuda1.html" target="_blank"></a>
-        <a class="area-link" style="top: 910px; left: 461px; width: 400px; height: 395px;" href="sobre.html" target="_blank"></a>
-        <a class="area-link" style="top: 1387px; left: 264px; width: 72px; height: 74px;" href="https://www.facebook.com/share/VeXWJtTjgaeFu7Po/?mibextid=qi2Omg" target="_blank"></a>
-        <a class="area-link" style="top: 1389px; left: 392px; width: 73px; height: 71px;" href="https://www.instagram.com/jogo.exploradores?igsh=MXF4dTI3OGw3ZXFiag==" target="_blank"></a>
-        <a class="area-link" style="top: 1388px; left: 519px; width: 86px; height: 70px;" href="mailto:jogoexploradores@gmail.com" target="_blank"></a>
-    </div>
+        <!-- Imagem de título -->
+        <img src="img/bttitulo.png" alt="Título" class="title-image">
 
-    <script>
-        document.querySelectorAll('.area-link').forEach(link => {
-            link.addEventListener('click', function(e) {
-                e.preventDefault();
-                window.open(this.href, '_blank');
-            });
-        });
-    </script>
+        <!-- Primeira tabela -->
+        <div class="table-container first-table">
+            <div class="row">
+                <div class="cell"><a href="calculadora.html"><img src="img/btcalculadora.png" alt="Calculadora"></a></div>
+                <div class="cell"><a href="exploradores-manual-mobile.pdf"><img src="img/btmanual.png" alt="Manual do jogo para celular"></a></div>
+            </div>
+            <div class="row">
+                <div class="cell"><a href="ajuda1.html"><img src="img/btmanualcalc.png" alt="Manual da calculadora"></a></div>
+                <div class="cell"><a href="sobre.html"><img src="img/btsobre.png" alt="Sobre o jogo Exploradores"></a></div>
+            </div>
+        </div>
+
+        <!-- Espaço vazio -->
+        <div style="height: 100px;"></div>
+
+        <!-- Segunda tabela -->
+        <div class="table-container second-table">
+            <div class="row">
+                <div class="cell"><a href="https://www.facebook.com/share/VeXWJtTjgaeFu7Po/?mibextid=qi2Omg"><img src="img/btfacebook.png" alt="Facebook"></a></div>
+                <div class="cell"><a href="https://www.instagram.com/jogo.exploradores?igsh=MXF4dTI3OGw3ZXFiag=="><img src="img/btinstagram.png" alt="Instagram"></a></div>
+                <div class="cell"><a href="mailto:jogoexploradores@gmail.com"><img src="img/btgmail.png" alt="Mande um email pra nós"></a></div>
+            </div>
+        </div>
+
+        <!-- Espaço vazio -->
+        <div style="height: 50px;"></div>
+        <div><h1>Copyright 2024</h1></div>
+    </div>
 </body>
 </html>
