--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
         <!-- Primeira tabela -->
         <div class="table-container first-table">
             <div class="row">
-                <div class="cell"><a href="calculadora.html"><img src="img/btcalculadora.png" alt="Calculadora"></a></div>
-                <div class="cell"><a href="./download/exploradoresmanualmobile.pdf"><img src="img/btmanual.png" alt="Manual do jogo para celular"></a></div>
+                <div class="cell"><a href="calculadora.html" target="_blank"><img src="img/btcalculadora.png" alt="Calculadora"></a></div>
+                <div class="cell"><a href="./download/exploradoresmanualmobile.pdf" target="_blank"><img src="img/btmanual.png" alt="Manual do jogo para celular"></a></div>
             </div>
             <div class="row">
-                <div class="cell"><a href="ajuda1.html"><img src="img/btmanualcalc.png" alt="Manual da calculadora"></a></div>
-                <div class="cell"><a href="sobre.html"><img src="img/btsobre.png" alt="Sobre o jogo Exploradores"></a></div>
+                <div class="cell"><a href="ajuda1.html" target="_blank"><img src="img/btmanualcalc.png" alt="Manual da calculadora"></a></div>
+                <div class="cell"><a href="sobre.html" target="_blank"><img src="img/btsobre.png" alt="Sobre o jogo Exploradores"></a></div>
             </div>
         </div>
 
@@ -85,9 +85,9 @@
         <!-- Segunda tabela -->
         <div class="table-container second-table">
             <div class="row">
-                <div class="cell"><a href="https://www.facebook.com/share/VeXWJtTjgaeFu7Po/?mibextid=qi2Omg"><img src="img/btfacebook.png" alt="Facebook"></a></div>
-                <div class="cell"><a href="https://www.instagram.com/jogo.exploradores?igsh=MXF4dTI3OGw3ZXFiag=="><img src="img/btinstagram.png" alt="Instagram"></a></div>
-                <div class="cell"><a href="mailto:jogoexploradores@gmail.com"><img src="img/btgmail.png" alt="Mande um email pra nós"></a></div>
+                <div class="cell"><a href="https://www.facebook.com/share/VeXWJtTjgaeFu7Po/?mibextid=qi2Omg" target="_blank"><img src="img/btfacebook.png" alt="Facebook"></a></div>
+                <div class="cell"><a href="https://www.instagram.com/jogo.exploradores?igsh=MXF4dTI3OGw3ZXFiag==" target="_blank"><img src="img/btinstagram.png" alt="Instagram"></a></div>
+                <div class="cell"><a href="mailto:jogoexploradores@gmail.com" target="_blank"><img src="img/btgmail.png" alt="Mande um email pra nós"></a></div>
             </div>
         </div>
 
