--- a/calcmao.html
+++ b/calcmao.html
@@ -2,7 +2,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link type="text/css" rel="stylesheet" href="resources/calc_style.css">
-    <title>eXp Calc - Mão (🖐️)</title>
+    <title>Exploradores - Calculadora de Mão (🖐️)</title>
     <style type="text/css">
 	
   .ritz .waffle a { color: inherit; }
