--- a/partida.html
+++ b/partida.html
@@ -30,7 +30,7 @@
 		<tbody>
 			<tr style="height: 30px">
 				<td class="s3"></td>
-				<td class="s9" dir="ltr"> <div style="color:#ffffff; text-align: center; font-size: 30pt;">Calcula Campanha - eXp</div></td>
+				<td class="s9" dir="ltr"> <div style="color:#ffffff; text-align: center; font-size: 30pt;">Calculadora de Campanhas - eXp</div></td>
 				<td class="s10" dir="ltr"></td>
 			</tr>
 		</tbody>
