--- a/partida.html
+++ b/partida.html
@@ -1,7 +1,7 @@
 <html lang="pt-br">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<tittle>Exploradores - Calculadora de Campanhas</tittle>
+<tittle>Calculadora de Campanhas - Exploradores</tittle>
 <link type="text/css" rel="stylesheet" href="resources/calc_style.css">
 <style type="text/css">
 	.ritz .waffle a { color: inherit; }
