--- a/calcmao.html
+++ b/calcmao.html
@@ -2,7 +2,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link type="text/css" rel="stylesheet" href="resources/calc_style.css">
-    <title>Exploradores - Calculadora de Mão (🖐️)</title>
+    <title>Calculadora de Mão 🖐️ - Exploradores</title>
     <style type="text/css">
 	
   .ritz .waffle a { color: inherit; }
@@ -41,7 +41,7 @@
       <table class="ritz grid-container" cellspacing="0" cellpadding="0">
 
         <tbody>
-            <td class="s3" dir="ltr"><div style="color:#ffffff; text-align: center; font-size: 30pt;">Calcula 🖐️ - eXp<div></td>
+            <td class="s3" dir="ltr"><div style="color:#ffffff; text-align: center; font-size: 30pt;">Calculadora de Mão 🖐️ - eXp<div></td>
           </tr>
         </tbody>
       </table>
