--- a/calculadora.html
+++ b/calculadora.html
@@ -272,7 +272,7 @@
             <tr>
               <td class="s3" style="width: 15%;"></td>
               <td class="s3" style="width: 70%; vertical-align: middle;" dir="ltr">
-                <div style="color:#ffffff; text-align: center; font-size: 30pt;">Formulário de Totalização - Exploradores [2/2]</div>
+                <div style="color:#ffffff; text-align: center; font-size: 30pt;">Tabela de Totalização - eXp [2/2]</div>
               </td>
               <td class="s3" style="width:  15%;"></td>
             </tr>
