--- a/calculadora.html
+++ b/calculadora.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>Formulário de Totalização - eXp</title>
+    <title>Tabela de Totalização - eXp</title>
     <link type="text/css" rel="stylesheet" href="resources/calc_style.css">
     <style type="text/css">
 	.ritz .waffle a { color: inherit; }
