--- a/calculadora.html
+++ b/calculadora.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>Tabela de Totalização - eXp</title>
+    <title>Tabela de Resultados - Exploradores</title>
     <link type="text/css" rel="stylesheet" href="resources/calc_style.css">
     <style type="text/css">
 	.ritz .waffle a { color: inherit; }
@@ -53,7 +53,7 @@
           <tr>
             <td class="s3" style="width: 15%;"></td>
             <td class="s3" style="width: 70%; vertical-align: middle;" dir="ltr">
-              <div style="color:#ffffff; text-align: center; font-size: 30pt;">Tabela de Totalização - eXp [1/2]</div>
+              <div style="color:#ffffff; text-align: center; font-size: 30pt;">Tabela de Resultados - eXp [1/2]</div>
             </td>
             <td class="s3" style="width:  15%;"></td>
           </tr>
@@ -272,7 +272,7 @@
             <tr>
               <td class="s3" style="width: 15%;"></td>
               <td class="s3" style="width: 70%; vertical-align: middle;" dir="ltr">
-                <div style="color:#ffffff; text-align: center; font-size: 30pt;">Tabela de Totalização - eXp [2/2]</div>
+                <div style="color:#ffffff; text-align: center; font-size: 30pt;">Tabela de Resultados - eXp [2/2]</div>
               </td>
               <td class="s3" style="width:  15%;"></td>
             </tr>
