--- a/partida.html
+++ b/partida.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link type="text/css" rel="stylesheet" href="resources/calc_style.css">
-<tittle>Calculadora de Campanhas - Exploradores</tittle>
+<title>Calculadora de Campanhas - Exploradores</title>
 <style type="text/css">
 	.ritz .waffle a { color: inherit; }
     .ritz .waffle .s36{background-color:#000000;text-align:left;color:#000000;font-family:'Arial';font-size:28pt;vertical-align:bottom;white-space:nowrap;direction:ltr;padding:2px 3px 2px 3px;}.ritz .waffle .s4{background-color:#000000;text-align:left;color:#ffffff;font-family:'Arial';font-size:28pt;vertical-align:middle;white-space:nowrap;direction:ltr;padding:2px 3px 2px 3px;}.ritz .waffle .s40{background-color:#00ffff;text-align:center;font-weight:bold;color:#000000;font-family:'Arial';font-size:28pt;vertical-align:middle;white-space:nowrap;direction:ltr;padding:2px 3px 2px 3px;}
