--- a/sobre.html
+++ b/sobre.html
@@ -6,7 +6,7 @@
     <title>Exploradores - O Jogo de Aventura e Estratégia</title>
     <style>
         body {
-            font-size: 16pt;
+            font-size: 12pt;
             line-height: 2;
             font-family: Arial, sans-serif;
             background-color: black;
@@ -19,12 +19,15 @@
             max-width: 900px;
             padding: 20px;
         }
+        h2 {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Exploradores 🧭</h1>
-        <h2>✨O Jogo de Aventura e Estratégia! ✨</h2>
+        <h2>Exploradores 🧭</h2>
+        <h3>✨O Jogo de Aventura e Estratégia! ✨</h3>
         <p>🔍 Embarque em expedições científicas desafiadoras e emocionantes!</p>
         <p>🎲 Duas modalidades para seu estilo: Exploradores Amigos 🤝 e Exploradores Rivais ⚔️.</p>
         <p>📜 Junte cartas de valor, supere bloqueios e proteja suas campanhas!</p>
