--- a/sobre.html
+++ b/sobre.html
@@ -22,6 +22,9 @@
         h2 {
             text-align: center;
         }
+        p {
+            text-align: justify;
+        }
     </style>
 </head>
 <body>
