--- a/sobre.html
+++ b/sobre.html
@@ -19,12 +19,9 @@
             max-width: 900px;
             padding: 20px;
         }
-        h2 {
-            text-align: center;
-        }
-        p {
-            text-align: justify;
-        }
+        h2 {text-align: center;}
+        h3 {text-align: center;}
+        p  {text-align: justify;}
     </style>
 </head>
 <body>
