--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exploradores - O Jogo de Aventura e Estratégia</title>
+    <title>Exploradores - Um Jogo de Aventura e Estratégia</title>
     <style>
         body {
             font-size: 13pt;
@@ -17,7 +17,7 @@
         }
         .container {
             max-width: 900px;
-            padding: 20px;
+            padding: 5px;
         }
         h2 {text-align: center;}
         h3 {text-align: center;}
@@ -27,18 +27,17 @@
 <body>
     <div class="container">
         <h2>Exploradores 🧭</h2>
-        <h3>✨O Jogo de Aventura e Estratégia! ✨</h3>
-        <p>🔍 Embarque em expedições científicas desafiadoras e emocionantes!</p>
+        <h3>✨Um Jogo de Aventura e Estratégia! ✨</h3>
+        <p>🚙 Embarque em campanhas científicas 🔍 desafiadoras e emocionantes!</p>
         <p>🎲 Duas modalidades para seu estilo: Exploradores Amigos 🤝 e Exploradores Rivais ⚔️.</p>
         <p>📜 Junte cartas de valor, supere bloqueios e proteja suas campanhas!</p>
         <p>🌋 Cuidado com os terremotos e conquiste grandes tesouros!</p>
         <p>🏆 Teste sua sorte e inteligência em um jogo cheio de reviravoltas.</p>
         <p>🧮 Utilize a calculadora do jogo online.</p>
-        <p>📸 E compartilhe a tabela de resultados com a hashtag #JogoExploradores</p>
-
-        <p>🕹️ Perfeito para amantes de jogos analógicos e aventuras estratégicas.</p>
-        <p>📍 Criado em Teresópolis, a Capital do Montanhismo.</p>
-        <p>👨‍💻 Por Paulo R. G. Mello e José M. C. Castilho.</p>
+        <p>🖼️ E compartilhe a tabela de resultados com a hashtag <b>#JogoExploradores</b></p>
+        <p>🎴♦️ Perfeito para amantes de jogos analógicos e aventuras estratégicas.</p>
+        <p>✒️ Criado por Paulo R. G. Mello e José M. C. Castilho.</p>
+        <p>🏔️ Em Teresópolis, a Capital do Montanhismo.</p>
     </div>
 </body>
 </html>
