--- a/sobre.html
+++ b/sobre.html
@@ -30,12 +30,12 @@
         <h3>✨Um Jogo de Aventura e Estratégia! ✨</h3>
         <p>🚙 Embarque em campanhas científicas 🔍 desafiadoras e emocionantes!</p>
         <p>🎲 Duas modalidades para seu estilo: Exploradores Amigos 🤝 e Exploradores Rivais ⚔️.</p>
-        <p>📜 Junte cartas de valor, supere bloqueios e proteja suas campanhas!</p>
+        <p>♦️♠️ Junte cartas de valor, supere bloqueios e proteja suas campanhas!</p>
         <p>🌋 Cuidado com os terremotos e conquiste grandes tesouros!</p>
         <p>🏆 Teste sua sorte e inteligência em um jogo cheio de reviravoltas.</p>
         <p>🧮 Utilize a calculadora do jogo online.</p>
         <p>🖼️ E compartilhe a tabela de resultados com a hashtag <b>#JogoExploradores</b></p>
-        <p>🎴♦️ Perfeito para amantes de jogos analógicos e aventuras estratégicas.</p>
+        <p>🀄 Perfeito para amantes de jogos analógicos e aventuras estratégicas.</p>
         <p>✒️ Criado por Paulo R. G. Mello e José M. C. Castilho.</p>
         <p>🏔️ Em Teresópolis, a Capital do Montanhismo.</p>
     </div>
