--- a/ajuda1.html
+++ b/ajuda1.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manual - eXp Calc</title>
+    <title>Manual da Tabela de Resultados</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            font-size: 16px;
+            font-size: 14px;
         }
 
         .header {
