--- a/ajuda1.html
+++ b/ajuda1.html
@@ -51,7 +51,7 @@
             <img src="img2/titulo.png" alt="Título" title="Título">
         </div>
         <div class="text">
-            <h2>A Tabela de Resultados do jogo Exploradores (eXp Calc) é composta por 3 telas:</h2>
+            <h2>A Tabela de Resultados do jogo Exploradores é composta por 3 telas:</h2>
             <h2>1- Tabela de Resultado</h2>
             <h2>2- Calculadora de Mão</h2>
             <h2>3- Calculadora de Campanha</h2>
