--- a/ajuda1.html
+++ b/ajuda1.html
@@ -48,10 +48,10 @@
 <body>
     <div class="grid-container" dir="ltr">
         <div class="image">
-            <img src="img2/titulo.png" alt="Título" title="Título">
+            <img src="img2/titulo.png" alt="Tabela de Resultados (Calculadora)" title="Tabela de Resultados (Calculadora)">
         </div>
         <div class="text">
-            <h2>A Tabela de Resultados do jogo Exploradores é composta por 3 telas:</h2>
+            <h2>A Tabela de Resultados (Calculadora) é composta por 3 telas:</h2>
             <h2>1- Tabela de Resultado</h2>
             <h2>2- Calculadora de Mão</h2>
             <h2>3- Calculadora de Campanha</h2>
