--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exploradores - O Jogo de Aventura e Estratégia</title>
+    <title>Exploradores - Jogo de Aventura e Estratégia</title>
+    <link rel="icon" href="./favicon.png" type="image/png">
     <style>
         body {
             background-color: #000;
