--- a/ajuda1.html
+++ b/ajuda1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manual da Tabela de Resultados</title>
+    <title>Manual da Tabela de Resultados (Calculadora)</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -158,7 +158,7 @@
             <div class="text">
                 <hr>
 
-                <h3>Pressione&nbsp;&nbsp;<b>&#9664;</b>&nbsp;&nbsp;para retornar à calculadora</h3>
+                <h3>Pressione&nbsp;&nbsp;<b>&#9664;</b>&nbsp;&nbsp;para retornar</h3>
                 <h3>Bom jogo!</h3>
             </div>
         </div>
