--- a/ajuda1.html
+++ b/ajuda1.html
@@ -4,6 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C27DXK1WRK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+       gtag('js', new Date());
+       gtag('config', 'G-C27DXK1WRK');
+    </script>
     <title>Manual da Tabela de Resultados (Calculadora)</title>
     <style>
         body {
