--- a/calculadora.html
+++ b/calculadora.html
@@ -1,6 +1,14 @@
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C27DXK1WRK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+       gtag('js', new Date());
+       gtag('config', 'G-C27DXK1WRK');
+    </script>
     <title>Tabela de Resultados - Exploradores</title>
     <link type="text/css" rel="stylesheet" href="resources/calc_style.css">
     <style type="text/css">
