--- a/partida.html
+++ b/partida.html
@@ -1,6 +1,14 @@
 <html lang="pt-br">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C27DXK1WRK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+       gtag('js', new Date());
+       gtag('config', 'G-C27DXK1WRK');
+    </script>
 <link type="text/css" rel="stylesheet" href="resources/calc_style.css">
 <title>Calculadora de Campanhas - Exploradores</title>
 <style type="text/css">
