--- a/calculadora.html
+++ b/calculadora.html
@@ -1,15 +1,7 @@
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C27DXK1WRK"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-       gtag('js', new Date());
-       gtag('config', 'G-C27DXK1WRK');
-    </script>
-    <title>Tabela de Resultados - Exploradores</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <title>eXp Calc - Formulário de Totalização</title>
     <link type="text/css" rel="stylesheet" href="resources/calc_style.css">
     <style type="text/css">
 	.ritz .waffle a { color: inherit; }
@@ -72,7 +64,7 @@
         <table class="waffle" cellspacing="0" cellpadding="0">
           <tbody>
             <tr style="height: 5px">
-              <td class="r0" dir="ltr" style="width: 20%;">Jogador</td>
+              <td class="r0" dir="ltr" style="width: 20%;">Jogs.</td>
               <td class="r1" dir="ltr" style="width:  2%;">P</td>
               <td class="r2" dir="ltr" style="width:  9%;">MÃO</td>
               <td class="r3" dir="ltr" style="width:  9%;">AMA</td>
@@ -324,7 +316,7 @@
               <td class="r16"></td>
             </tr>
             <tr style="height: 80px">
-              <td class="r17" id="jog5" title="Jogador 5" onclick="EditarNome(this,3)">Jogador5</td>
+              <td class="r17" id="jog5" title="Jogador 5" onclick="EditarNome(this,4)">Jogador5</td>
               <td class="r9">2</td>
               <td class="r10" dir="ltr" id="414"><a href="calcmao.html?arg1=4&amp;arg2=1&amp;arg3=4"><div  id="vlr414">0</div></a></a></td>
               <td class="r11" dir="ltr" id="410"><a href="partida.html?arg1=4&amp;arg2=1&amp;arg3=0"><div  id="vlr410">0</div></a></a></td>
@@ -368,7 +360,7 @@
               <td class="r16"></td>
             </tr>
             <tr style="height: 80px">
-              <td class="r17" id="jog6" title="Jogador 6" onclick="EditarNome(this,3)">Jogador6</td>
+              <td class="r17" id="jog6" title="Jogador 6" onclick="EditarNome(this,5)">Jogador6</td>
               <td class="r9">2</td>
               <td class="r10" dir="ltr" id="514"><a href="calcmao.html?arg1=5&amp;arg2=1&amp;arg3=4"><div  id="vlr514">0</div></a></a></td>
               <td class="r11" dir="ltr" id="510"><a href="partida.html?arg1=5&amp;arg2=1&amp;arg3=0"><div  id="vlr510">0</div></a></a></td>
@@ -412,7 +404,7 @@
               <td class="r16"></td>
             </tr>
             <tr style="height: 80px">
-              <td class="r17" id="jog7" title="Jogador 7" onclick="EditarNome(this,3)">Jogador7</td>
+              <td class="r17" id="jog7" title="Jogador 7" onclick="EditarNome(this,6)">Jogador7</td>
               <td class="r9">2</td>
               <td class="r10" dir="ltr" id="614"><a href="calcmao.html?arg1=6&amp;arg2=1&amp;arg3=4"><div  id="vlr614">0</div></a></a></td>
               <td class="r11" dir="ltr" id="610"><a href="partida.html?arg1=6&amp;arg2=1&amp;arg3=0"><div  id="vlr610">0</div></a></a></td>
@@ -456,7 +448,7 @@
               <td class="r16"></td>
             </tr>
             <tr style="height: 80px">
-              <td class="r17" id="jog8" title="Jogador 8" onclick="EditarNome(this,3)">Jogador8</td>
+              <td class="r17" id="jog8" title="Jogador 8" onclick="EditarNome(this,7)">Jogador8</td>
               <td class="r9">2</td>
               <td class="r10" dir="ltr" id="714"><a href="calcmao.html?arg1=7&amp;arg2=1&amp;arg3=4"><div  id="vlr714">0</div></a></a></td>
               <td class="r11" dir="ltr" id="710"><a href="partida.html?arg1=7&amp;arg2=1&amp;arg3=0"><div  id="vlr710">0</div></a></a></td>
