--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
         </div>
 
         <div class="small-icons">
-            <a href="https://www.facebook.com"><img src="img/facebook.png" alt="Facebook"></a>
-            <a href="https://www.instagram.com"><img src="img/instagram.png" alt="Instagram"></a>
-            <a href="mailto:email@exemplo.com"><img src="img/email.png" alt="Email"></a>
+            <a href="https://www.facebook.com"><img src="./img/facebook.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com"><img src="./img/instagram.png" alt="Instagram"></a>
+            <a href="mailto:email@exemplo.com"><img src="./img/email.png" alt="Email"></a>
         </div>
 
         <footer>
