--- a/index.html
+++ b/index.html
@@ -90,33 +90,33 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="./img/logo.png" alt="Exploradores">
+            <img src="img/logo.png" alt="Exploradores">
         </div>
 
         <div class="bubble yellow" onclick="window.location.href='sobre-nos.html'">
-            <img src="./img/sobre-nos.png" alt="Sobre Nós">
+            <img src="img/sobre-nos.png" alt="Sobre Nós">
             <p>Sobre Nós</p>
         </div>
 
         <div class="bubble red" onclick="window.location.href='manual-mobile.html'">
-            <img src="./img/manual.png" alt="Manual (Mobile)">
+            <img src="img/manual.png" alt="Manual (Mobile)">
             <p>Manual (Mobile)</p>
         </div>
 
         <div class="bubble blue" onclick="window.location.href='calculadora.html'">
-            <img src="./img/calculadora.png" alt="Calculadora">
+            <img src="img/calculadora.png" alt="Calculadora">
             <p>Calculadora</p>
         </div>
 
         <div class="bubble green" onclick="window.location.href='manual-calculadora.html'">
-            <img src="./img/manual-calculadora.png" alt="Manual da Calculadora">
+            <img src="img/manual-calculadora.png" alt="Manual da Calculadora">
             <p>Manual da Calculadora</p>
         </div>
 
         <div class="small-icons">
-            <a href="https://www.facebook.com"><img src="./img/facebook.png" alt="Facebook"></a>
-            <a href="https://www.instagram.com"><img src="./img/instagram.png" alt="Instagram"></a>
-            <a href="mailto:email@exemplo.com"><img src="./img/email.png" alt="Email"></a>
+            <a href="https://www.facebook.com"><img src="img/facebook.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com"><img src="img/instagram.png" alt="Instagram"></a>
+            <a href="mailto:email@exemplo.com"><img src="img/email.png" alt="Email"></a>
         </div>
 
         <footer>
