--- a/index.html
+++ b/index.html
@@ -108,10 +108,12 @@
             <p>Calculadora</p>
         </div>
 
-        <div class="bubble green" onclick="window.location.href='manual-calculadora.html'">
-            <img src="img/manual-calculadora.png" alt="Manual da Calculadora">
-            <p>Manual da Calculadora</p>
-        </div>
+        <div class="bubble red" onclick="window.location.href='exploradoresmanualmobile.pdf'">
+                <a href="exploradoresmanualmobile.pdf" download>
+                   <img src="img/manual.png" alt="Manual (Mobile)">
+                   <p>Manual (Mobile)</p>
+                </a>
+         </div>
 
         <div class="small-icons">
             <a href="https://www.facebook.com"><img src="img/facebook.png" alt="Facebook"></a>
