--- a/index.html
+++ b/index.html
@@ -94,27 +94,23 @@
         </div>
 
         <div class="bubble yellow" onclick="window.location.href='sobre-nos.html'">
-            <img src="img/sobre-nos.png" alt="Sobre Nós">
+            <img src="img/btsobre.png" alt="Sobre Nós">
             <p>Sobre Nós</p>
         </div>
 
         <div class="bubble red" onclick="window.location.href='exploradoresmanualmobile.pdf'">
               <a href="exploradoresmanualmobile.pdf" download>
-               <img src="img/manual.png" alt="Manual (Mobile)">
+               <img src="img/btmanual.png" alt="Manual (Mobile)">
                 <p>Manual (Mobile)</p>
               </a>
         </div>
 
         <div class="bubble blue" onclick="window.location.href='calculadora.html'">
-            <img src="img/calculadora.png" alt="Calculadora">
+            <img src="img/btcalculadora.png" alt="Calculadora">
             <p>Calculadora</p>
         </div>
         
-        <div class="bubble red" onclick="window.location.href='manual-mobile.html'">
-            <img src="img/manual.png" alt="Manual (Mobile)">
-            <p>Manual (Mobile)</p>
-        </div>
-        
+
         <div class="small-icons">
             <a href="https://www.facebook.com"><img src="img/btfacebook.png" alt="Facebook"></a>
             <a href="https://www.instagram.com"><img src="img/btinstagram.png" alt="Instagram"></a>
