--- a/index.html
+++ b/index.html
@@ -93,23 +93,27 @@
             <img src="img/logo.png" alt="Exploradores">
         </div>
 
-        <div class="bubble yellow" onclick="window.location.href='sobre-nos.html'">
-            <img src="img/btsobre.png" alt="Sobre Nós">
-            <p>Sobre Nós</p>
+        <div class="bubble yellow" onclick="window.location.href='calculadora.html'">
+            <img src="img/btcalculadora.png" alt="Calculadora">
+            <p>Calculadora</p>
         </div>
 
-        <div class="bubble red" onclick="window.location.href='exploradoresmanualmobile.pdf'">
+        <div class="bubble blue"  onclick="window.location.href='exploradoresmanualmobile.pdf'">
               <a href="exploradoresmanualmobile.pdf" download>
                <img src="img/btmanual.png" alt="Manual (Mobile)">
                 <p>Manual (Mobile)</p>
               </a>
         </div>
-
-        <div class="bubble blue" onclick="window.location.href='calculadora.html'">
-            <img src="img/btcalculadora.png" alt="Calculadora">
-            <p>Calculadora</p>
-        </div>
         
+        <div class="bubble red" onclick="window.location.href='calculadora.html'">
+            <img src="calculadora.png" alt="Calculadora">
+            <p>Calculadora</p>
+        </div>           
+            
+        <div class="bubble red" onclick="window.location.href='sobre.html'">
+            <img src="img/btsobre.png" alt="Sobre Nós">
+            <p>Sobre Nós</p>
+        </div>
 
         <div class="small-icons">
             <a href="https://www.facebook.com"><img src="img/btfacebook.png" alt="Facebook"></a>
