--- a/index.html
+++ b/index.html
@@ -98,15 +98,16 @@
             <p>Calculadora</p>
         </div>
 
-        <div class="bubble blue"  onclick="window.location.href='exploradoresmanualmobile.pdf'">
-              <a href="exploradoresmanualmobile.pdf" download>
-               <img src="img/btmanual.png" alt="Manual (Mobile)">
-                <p>Manual (Mobile)</p>
-              </a>
-        </div>
+
+        <a href="exploradoresmanualmobile.pdf" download>
+              <div class="bubble blue">
+                  <img src="img/btmanual.png" alt="Manual (Mobile)">
+                  <p>Manual (Mobile)</p>
+               </div>
+         </a>
         
         <div class="bubble red" onclick="window.location.href='calculadora.html'">
-            <img src="calculadora.png" alt="Calculadora">
+            <img src="img/btcalculadora.png" alt="Calculadora">
             <p>Calculadora</p>
         </div>           
             
