--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
          </a>
         
         <div class="bubble red" onclick="window.location.href='calculadora.html'">
-            <img src="img/btcalculadora.png" alt="Calculadora">
+            <img src="img/btmanualcalc.png" alt="Calculadora">
             <p>Calculadora</p>
         </div>           
             
-        <div class="bubble red" onclick="window.location.href='sobre.html'">
+        <div class="bubble green" onclick="window.location.href='sobre.html'">
             <img src="img/btsobre.png" alt="Sobre Nós">
             <p>Sobre Nós</p>
         </div>
