--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="small-icons">
             <a href="https://www.facebook.com"><img src="img/btfacebook.png" alt="Facebook"></a>
             <a href="https://www.instagram.com"><img src="img/btinstagram.png" alt="Instagram"></a>
-            <a href="mailto:email@exemplo.com"><img src="img/btgemail.png" alt="e-mail"></a>
+            <a href="mailto:email@exemplo.com"><img src="img/btgmail.png" alt="e-mail"></a>
         </div>
 
         <footer>
