--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="img/logo.png" alt="Exploradores">
+            <img src="img/bttítulo.png" alt="Exploradores">
         </div>
 
         <div class="bubble yellow" onclick="window.location.href='calculadora.html'">
