--- a/sobre.html
+++ b/sobre.html
@@ -11,7 +11,7 @@
        gtag('js', new Date());
        gtag('config', 'G-C27DXK1WRK');
     </script>
-    <title>Exploradores - Um Jogo de Aventura e Estratégia</title>
+    <title>Exploradores - Jogo de Aventura e Estratégia</title>
     <style>
         body {
             font-size: 13pt;
