--- a/partida.html
+++ b/partida.html
@@ -1,16 +1,7 @@
 <html lang="pt-br">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C27DXK1WRK"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-       gtag('js', new Date());
-       gtag('config', 'G-C27DXK1WRK');
-    </script>
 <link type="text/css" rel="stylesheet" href="resources/calc_style.css">
-<title>Calculadora de Campanhas - Exploradores</title>
 <style type="text/css">
 	.ritz .waffle a { color: inherit; }
     .ritz .waffle .s36{background-color:#000000;text-align:left;color:#000000;font-family:'Arial';font-size:28pt;vertical-align:bottom;white-space:nowrap;direction:ltr;padding:2px 3px 2px 3px;}.ritz .waffle .s4{background-color:#000000;text-align:left;color:#ffffff;font-family:'Arial';font-size:28pt;vertical-align:middle;white-space:nowrap;direction:ltr;padding:2px 3px 2px 3px;}.ritz .waffle .s40{background-color:#00ffff;text-align:center;font-weight:bold;color:#000000;font-family:'Arial';font-size:28pt;vertical-align:middle;white-space:nowrap;direction:ltr;padding:2px 3px 2px 3px;}
@@ -38,7 +29,7 @@
 		<tbody>
 			<tr style="height: 30px">
 				<td class="s3"></td>
-				<td class="s9" dir="ltr"> <div style="color:#ffffff; text-align: center; font-size: 30pt;">Calculadora de Campanhas - eXp</div></td>
+				<td class="s9" dir="ltr"> <div style="color:#ffffff; text-align: center; font-size: 30pt;">Calcula Campanha - eXp</div></td>
 				<td class="s10" dir="ltr"></td>
 			</tr>
 		</tbody>
@@ -157,8 +148,12 @@
                 </td>
 				<td class="C0" dir="ltr" id="num12" title="Seleção.">✘</td>
 				<td class="s10"></td>
-				<td class="s24" dir="ltr"></td>
-				<td class="s0" dir="ltr"></td>
+				<td class="s24" dir="ltr">
+                    <img src="./img/num99.png" class="btclass" onclick="marcarTodosNumeros();" alt="Marca Todos" style="width:70px;height:70px;">
+                </td>
+				<td class="s10"></td>
+				<td class="s2"></td>
+				<td class="s0"></td>
 				<td class="s2"></td>
 				<td class="s0"></td>
 			</tr>
