--- a/partida.html
+++ b/partida.html
@@ -151,7 +151,7 @@
 				<td class="s24" dir="ltr">
                     <img src="./img/num99.png" class="btclass" onclick="marcarTodosNumeros();" alt="Marca Todos" style="width:70px;height:70px;">
                 </td>
-				<td class="s10"></td>
+				<td class="C0">T</td>
 				<td class="s2"></td>
 				<td class="s0"></td>
 				<td class="s2"></td>
