--- a/ajuda1.html
+++ b/ajuda1.html
@@ -134,7 +134,7 @@
                 <h3>3.2 - Botões da Calculadora de Campanha</h3>
                 <p>Usando os botões correspondentes às cartas de pontuação o cálculo será feito automaticamente a cada mudança.</p>
                 <p>Note que as cartas <b>Certificado Federal</b> e <b>Proteção</b> não pontuam e por isso não interferem no cálculo.</p>
-                <p>DICA: Usando o botão # (Todos) irá marcar ou desmarcar todos os números. (Somente os números!)</p>
+                <p>DICA: Usando o botão # (Todos) irá marcar (✔) ou desmarcar (✘) todos os números. (Somente os números!)</p>
             </div>
             <div class="image">
                 <img src="img2/imgman32.png" alt="Botões da Calculadora de Campanha" title="Botões da Calculadora de Campanha">
