--- a/ajuda1.html
+++ b/ajuda1.html
@@ -80,11 +80,19 @@
             <div class="text">
                 <p>A Tabela de Resultados suporta até 8 jogadores e três partidas do Jogo Exploradores.</p>
                 <p>Você vai ter acesso simples ao cálculo de Campanhas e Mão.</p>
+            </div>
+            <br>
+            <hr>
+            <br>
+            <div class="text">
                 <h3>1.2 - Onde clicar pra editar.</h3>
             </div>
             <div class="image">
                 <img src="./img2/imgman12.png" alt="Modo de usar">
             </div>
+            <br>
+            <hr>
+            <br>
             <div class="text">
                 <h3>1.3 - Botões Reset e Manual</h3>
                 <p>No final da tela você vai encontrar estes botões:</p>
@@ -92,6 +100,9 @@
             <div class="image">
                 <img src="img2/imgman13.png" alt="Botões Reset e Manual" title="Botões Reset e Manual">
             </div>
+            <br>
+            <hr>
+            <br>
             <div class="text">
                 <h3>2 - Calculadora de Mão</h3>
             </div>
@@ -102,6 +113,9 @@
             <div class="image">
                 <img src="img2/imgman21.png" alt="Calculadora de Mão" title="Calculadora de Mão">
             </div>
+            <br>
+            <hr>
+            <br>
             <div class="text">
                 <h3>2.2 - Botões da Calculadora de Mão</h3>
                 <p>Clique nos botões <b>Menos</b> e <b>Mais</b> para diminuir ou adicionar um item para calcular.</p>
@@ -109,12 +123,18 @@
             <div class="image">
                 <img src="img2/imgman22.png" alt="Botões da Calculadora de Mão" title="Botões da Calculadora de Mão">
             </div>
+            <br>
+            <hr>
+            <br>
             <div class="text">
                 <h3>2.3 - Total da Calculadora de Mão</h3>
             </div>
             <div class="image">
                 <img src="img2/imgman23.png" alt="Total da Calculadora de Mão" title="Total da Calculadora de Mão">
             </div>
+            <br>
+            <hr>
+            <br>
             <div class="text">
                 <h3>2.4 - Finalizar o cálculo da Mão</h3>
                 <p>Ao finalizado o cálculo da Mão para um jogador clique no botão <b>Voltar</b> para retornar à Tabela de Resultados.</p>
@@ -122,6 +142,9 @@
             <div class="image">
                 <img src="img2/imgman24.png" alt="Finalizar o cálculo da Mão" title="Finalizar o cálculo da Mão">
             </div>
+            <br>
+            <hr>
+            <br>
             <div class="text">
                 <h3>3 - Calculadora de Campanha</h3>
                 <h3>3.1 - Cabeçalho da Calculadora de Campanha</h3>
@@ -130,6 +153,9 @@
             <div class="image">
                 <img src="img2/imgman31.png" alt="Cabeçalho da Calculadora de Campanhas" title="Cabeçalho da Calculadora de Campanhas">
             </div>
+            <br>
+            <hr>
+            <br>
             <div class="text">
                 <h3>3.2 - Botões da Calculadora de Campanha</h3>
                 <p>Usando os botões correspondentes às cartas de pontuação o cálculo será feito automaticamente a cada mudança.</p>
@@ -139,12 +165,18 @@
             <div class="image">
                 <img src="img2/imgman32.png" alt="Botões da Calculadora de Campanha" title="Botões da Calculadora de Campanha">
             </div>
+            <br>
+            <hr>
+            <br>
             <div class="text">
                 <h3>3.3 - Quantidade de Cartas Tesouro e Financiamento</h3>
             </div>
             <div class="image">
                 <img src="img2/imgman33.png" alt="Quantidade de Cartas Tesouro e Financiamento" title="Quantidade de Cartas Tesouro e Financiamento">
             </div>
+            <br>
+            <hr>
+            <br>
             <div class="text">
                 <h3>3.4 - Total da Cor</h3>
             </div>
@@ -157,6 +189,9 @@
             <div class="image">
                 <img src="img2/imgman35.png" alt="Finalizar o cálculo da Campanha" title="Finalizar o cálculo da Campanha">
             </div>
+            <br>
+            <hr>
+            <br>
             <div class="text">
                 <h3>4 - Compartilhando o Resultado</h3>
                 <h3>4.1 - Capture a tela e compartilhe nas redes usando a hashtag: <b>#JogoExploradores</b></h3>
